# novel-translator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setting.example.toml
.github/workflows/: ci.yml
app/: __init__.py  analysis.py  book_io.py  cli_main.py  config.py  context.py  delivery.py  feedback.py  manual.py  memory.py  models.py  persona.py  placeholders.py  quality.py  review.py  runs.py  snapshots.py  task_control.py  terminology.py  translator.py  work_records.py  workspace.py
docs/: translation-lessons.md
prompts/: novel_translation_system.md
skills/novel-translator/: SKILL.md
skills/novel-translator/references/: cli-command-contract.md  quality-and-recovery.md  terminology-workflow.md
tests/: test_book_io.py
