[project]
name = "novel-translator"
version = "0.1.0"
description = "Agent-friendly novel translation toolkit for EPUB and TXT books"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "OYcedar" },
]
keywords = ["agent", "epub", "novel", "translation", "txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/OYcedar/novel-translator"
Repository = "https://github.com/OYcedar/novel-translator"
Issues = "https://github.com/OYcedar/novel-translator/issues"

[project.optional-dependencies]
epub = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
]

[project.scripts]
novel-translator = "app.cli_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
